syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.schibsted.messaging.grpc";
option java_outer_classname = "MessagingProto";

service MessageRepository {
  rpc get(InternalMessageId) returns (InternalMessage) {}
  rpc save(InternalMessage) returns (InternalMessageId) {}
}

message InternalMessage {
  InternalMessageId id = 1;
  User userFrom = 2;
  User userTo = 3;
  Item item = 4;
  Content content = 5;
  int32 timestamp = 6;
}

message InternalMessageId {
  string id = 1;
}

message User {
  UserId id = 1;
  string name = 2;
  string email = 3;
}

message UserId {
  string id = 1;
}

message Item {
  string type = 1;
  string id = 2;
}

message Content {
  string title = 1;
  string body = 2;
}